unpackaged/main/default/objects/Service__c/fields/Worker_Name__c.field-meta.xml
<CustomField>
    <fullName>Worker_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Worker Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>