unpackaged/main/default/objects/Service__c/fields/X1st_Blood_Pressure_Diastolic_mmHg__c.field-meta.xml
<CustomField>
    <fullName>X1st_Blood_Pressure_Diastolic_mmHg__c</fullName>
    <label>1st Blood Pressure Diastolic (mmHg)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>