unpackaged/main/default/objects/Service__c/fields/Xnd_Blood_Pressure_Systolic_mmHg__c.field-meta.xml
<CustomField>
    <fullName>Xnd_Blood_Pressure_Systolic_mmHg__c</fullName>
    <label>2nd Blood Pressure Systolic (mmHg)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>