unpackaged/main/default/objects/Service__c/recordTypes/Comprehensive_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Comprehensive_Assessment</fullName>
    <active>true</active>
    <label>Comprehensive Assessment</label>
</RecordType>