unpackaged/main/default/objects/Service__c/recordTypes/Education_Information.recordType-meta.xml
<RecordType>
    <fullName>Education_Information</fullName>
    <active>true</active>
    <label>Education / Information</label>
</RecordType>