unpackaged/main/default/objects/Service__c/recordTypes/Physical_Health_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Physical_Health_Assessment</fullName>
    <active>true</active>
    <label>Physical Health Assessment</label>
</RecordType>