unpackaged/main/default/objects/Service__c/validationRules/Blood_Sugar_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Blood_Sugar_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Physical_Health_Assessment&#39;,
				NOT(ISBLANK( Random_BGL_mmoll__c )),
				OR(
				Random_BGL_mmoll__c &lt; 1 ,Random_BGL_mmoll__c &gt; 40))</errorConditionFormula>
    <errorDisplayField>Random_BGL_mmoll__c</errorDisplayField>
    <errorMessage>Random BGL should be from 1.00 to 40.00.</errorMessage>
</ValidationRule>