unpackaged/main/default/objects/Service__c/validationRules/Category_Required_on_Absconding.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_Required_on_Absconding</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName == &#39;Comprehensive_Assessment&#39;,
				TEXT(Absconding_Assessed_Level__c) != &#39;&#39; , 
				TEXT(Absconding_Assessed_Level__c) != &#39;No Risk&#39;,
			TEXT(Absconding_Category_Level__c) == &#39;&#39;)</errorConditionFormula>
    <errorDisplayField>Absconding_Category_Level__c</errorDisplayField>
    <errorMessage>Absconding (Category Level) is mandatory.</errorMessage>
</ValidationRule>