unpackaged/main/default/objects/Service__c/validationRules/Category_Required_on_Violence.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_Required_on_Violence</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Comprehensive_Assessment&#39;,
				TEXT(Violence_Aggregation_Assessed_Level__c) != &#39;&#39; ,
				TEXT(Violence_Aggregation_Assessed_Level__c) != &#39;No Risk&#39;,
			TEXT(Violence_Aggregation_Category_Level__c) == &#39;&#39;)</errorConditionFormula>
    <errorDisplayField>Violence_Aggregation_Category_Level__c</errorDisplayField>
    <errorMessage>Voilence / Aggregation (Category Level) is mandatory.</errorMessage>
</ValidationRule>