unpackaged/main/default/objects/Service__c/validationRules/Category_Required_on_Vulnerability.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_Required_on_Vulnerability</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Comprehensive_Assessment&#39;,
				TEXT(Vulnerability_Assessed_Level__c) != &#39;&#39; ,
				TEXT(Vulnerability_Assessed_Level__c) != &#39;No Risk&#39;,
			TEXT(Vulnerability_Category_Level__c) == &#39;&#39;)</errorConditionFormula>
    <errorDisplayField>Vulnerability_Category_Level__c</errorDisplayField>
    <errorMessage>Vulnerability (Category Level) is mandatory.</errorMessage>
</ValidationRule>