unpackaged/main/default/objects/Service__c/validationRules/Contact_Date_Time_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Date_Time_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Contact_Date_Time__c)),
			DATEVALUE(Contact_Date_Time__c) &gt; TODAY())</errorConditionFormula>
    <errorDisplayField>Contact_Date_Time__c</errorDisplayField>
    <errorMessage>Contact Date Time can not be future date.</errorMessage>
</ValidationRule>