unpackaged/main/default/objects/Service__c/validationRules/Diastolic_BP_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Diastolic_BP_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(X1st_Blood_Pressure_Diastolic_mmHg__c) ,NOT(ISBLANK(X2nd_Blood_Pressure_Diastolic_mmHg__c)) )</errorConditionFormula>
    <errorDisplayField>X1st_Blood_Pressure_Diastolic_mmHg__c</errorDisplayField>
    <errorMessage>1st Blood Pressure Diastolic should have some value.</errorMessage>
</ValidationRule>