unpackaged/main/default/objects/Service__c/validationRules/Height_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Height_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Physical_Health_Assessment&#39;,
				NOT(ISBLANK( Height_m__c   ))
				,
				OR(Height_m__c &lt;= 0 ,Height_m__c &gt; 2.5))</errorConditionFormula>
    <errorDisplayField>Height_m__c</errorDisplayField>
    <errorMessage>Height should be between 0.0 to 2.50.</errorMessage>
</ValidationRule>