unpackaged/main/default/objects/Service__c/validationRules/Manual_Pulse_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Manual_Pulse_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Physical_Health_Assessment&#39;,
				NOT(ISBLANK(Manual_Pulse__c)),
				OR(Manual_Pulse__c &lt;= 0 ,Manual_Pulse__c &gt; 500))</errorConditionFormula>
    <errorDisplayField>Manual_Pulse__c</errorDisplayField>
    <errorMessage>Manual Pulse should be between 0 to 500.</errorMessage>
</ValidationRule>