unpackaged/main/default/objects/Service__c/validationRules/Oxygen_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Oxygen_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Physical_Health_Assessment&#39;,
				NOT(ISBLANK(  SaO2__c  )),
				OR(
				SaO2__c &lt; 0.85 ,SaO2__c &gt; 1))</errorConditionFormula>
    <errorDisplayField>SaO2__c</errorDisplayField>
    <errorMessage>SaO2% should be from 85.00 to 100.00.</errorMessage>
</ValidationRule>