unpackaged/main/default/objects/Service__c/validationRules/Respiration_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Respiration_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Physical_Health_Assessment&#39;,
				NOT(ISBLANK( Respiration_per_minute__c )),
			OR(	Respiration_per_minute__c &lt;= 0 ,Respiration_per_minute__c &gt; 200))</errorConditionFormula>
    <errorDisplayField>Respiration_per_minute__c</errorDisplayField>
    <errorMessage>Respiration should be between 0 to 200.</errorMessage>
</ValidationRule>