unpackaged/main/default/objects/Service__c/validationRules/Systolic_BP_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Systolic_BP_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Xst_Blood_Pressure_Systolic_mmHg__c) ,NOT(ISBLANK(Xnd_Blood_Pressure_Systolic_mmHg__c)) )</errorConditionFormula>
    <errorDisplayField>Xst_Blood_Pressure_Systolic_mmHg__c</errorDisplayField>
    <errorMessage>1st Blood Pressure Systolic should have some value.</errorMessage>
</ValidationRule>