unpackaged/main/default/objects/Service__c/validationRules/Temperature_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Temperature_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Physical_Health_Assessment&#39;,
				NOT(ISBLANK(Temperature__c)),
				OR(Temperature__c &lt;= 0 ,Temperature__c &gt; 60))</errorConditionFormula>
    <errorDisplayField>Temperature__c</errorDisplayField>
    <errorMessage>Temperature should be between 0.0 to 60.0.</errorMessage>
</ValidationRule>