unpackaged/main/default/objects/Service__c/validationRules/Waist_Circumference_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Waist_Circumference_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Physical_Health_Assessment&#39;,
				NOT(ISBLANK(Waist_Circumference_cm__c)),
				OR(Waist_Circumference_cm__c &lt;= 0 ,Waist_Circumference_cm__c &gt; 200))</errorConditionFormula>
    <errorDisplayField>Waist_Circumference_cm__c</errorDisplayField>
    <errorMessage>Waist Circumference should be between 0.0 to 200.0</errorMessage>
</ValidationRule>