unpackaged/main/default/objects/Service__c/validationRules/Weight_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Physical_Health_Assessment&#39;,
				NOT(ISBLANK(  Weight_kg__c  )),
				OR(Weight_kg__c &lt;= 0 ,Weight_kg__c &gt; 300))</errorConditionFormula>
    <errorDisplayField>Weight_kg__c</errorDisplayField>
    <errorMessage>Weight should be between 0.0 to 300.0.</errorMessage>
</ValidationRule>