unpackaged/main/default/objects/Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client_Name__c</columns>
    <columns>Client_No__c</columns>
    <columns>Client_Status__c</columns>
    <columns>Episode_No__c</columns>
    <columns>Episode__c</columns>
    <columns>Episode_Type__c</columns>
    <columns>Team__c</columns>
    <columns>Client__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>